Source/JavaScriptCore/jit/JIT.h
@@ -1056,6 +1056,8 @@ namespace JSC {
         BytecodeIndex m_loopOSREntryBytecodeIndex;
 
         RefPtr<DirectJITCode> m_jitCode;
+
+        Vector<std::pair<Call, CallLinkInfo&>> m_virtualCalls;
     };
 
 } // namespace JSC
